--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,26 @@
   		<version>2.3</version>
   	</dependency>
   	<dependency>
+    	<groupId>com.sparkjava</groupId>
+    	<artifactId>spark-template-velocity</artifactId>
+    	<version>2.3</version>
+	</dependency>
+  	<dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>19.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.kohsuke</groupId>
+      <artifactId>github-api</artifactId>
+      <version>1.76</version>
+    </dependency>
+    <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
