--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ build/
 bin/
 /bin/
 src/main/webapp/WEB-INF
+*.class
+
+*.class
+
+*.class
+
+target/classes/app/snippet/SnippetDao.class
+
+target/classes/app/util/Routes$Web.class
