--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>snippets-app</artifactId>
   <version>1.0</version>
   <name>snippets-app</name>
-  <dependencies>
+<dependencies>
   	<dependency>
   		<groupId>com.sparkjava</groupId>
   		<artifactId>spark-core</artifactId>
@@ -30,7 +30,7 @@
 		<artifactId>junit</artifactId>
 		<version>4.12</version>
 		<scope>test</scope>
-	</dependency>
+	</dependency>	
   </dependencies>
   <build>
     <plugins>
@@ -42,6 +42,16 @@
                 <source>1.8</source>
                 <target>1.8</target>
             </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.18.1</version>
+          <configuration>
+          	<argLine>${argLine}</argLine>
+          	<skip>false</skip>
+          	<skipTests>false</skipTests>
+          </configuration>
         </plugin>
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
@@ -66,20 +76,6 @@
             </configuration>
         </plugin>
         <plugin>
-    		<groupId>com.heroku.sdk</groupId>
-    		<artifactId>heroku-maven-plugin</artifactId>
-    		<version>0.4.4</version>
-    		<configuration>
-        		<jdkVersion>1.8</jdkVersion>        		
-        		<appName>book2-app</appName> 
-        		<processTypes>
-            	<!-- Tell Heroku how to launch your application -->
-            	<!-- You might have to remove the ./ in front   -->
-            	<web>java -jar ./target/book2-app-1.0-jar-with-dependencies.jar</web>
-        	</processTypes>
-    		</configuration>
-		</plugin>
-		<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>2.4</version>
@@ -91,6 +87,19 @@
                 </execution>
             </executions>
         </plugin>
+        <plugin>
+    		<groupId>org.jacoco</groupId>
+    		<artifactId>jacoco-maven-plugin</artifactId>
+    		<version>0.7.7.201606060606</version>
+    		<executions>
+        		<execution>
+            		<id>prepare-agent</id>
+            		<goals>
+                		<goal>prepare-agent</goal>
+            		</goals>
+        		</execution>
+    		</executions>
+		</plugin>
     </plugins>
 </build>
 </project>
